# agent

./: CLAUDE.md  Cargo.toml  Dockerfile  build.rs  renovate.json
.github/workflows/: ci.yml  release.yml  renovate.yml
benches/: collector_bench.rs  k8s_compat_bench.rs
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  cronjob.yaml  networkpolicy.yaml  secret.yaml  serviceaccount.yaml
proto/: kubesavings.proto
src/: collector.rs  config.rs  lib.rs  main.rs  sender.rs  types.rs
tests/: k8s_api_compat.rs  node_pool_snapshot.rs
