[package]
name = "kubesavings-agent"
version = "1.2.0"
edition = "2021"
description = "KubeSavings Kubernetes metrics collector agent"

[[bin]]
name = "kubesavings-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
k8s-openapi = { version = "0.22", features = ["v1_29"] }
kube = { version = "0.91", features = ["runtime", "client", "rustls-tls"], default-features = false }
tokio-retry = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
http = "1"
url = "2"

[build-dependencies]
prost-build = "0.13"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "collector_bench"
harness = false

[[bench]]
name = "k8s_compat_bench"
harness = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
